# mydatanaut

./: .xsdata.xml  pyproject.toml  setup.cfg
mydata/enums/: income_classification.py  income_classification_category.py  invoice_type.py  payment_method.py  vat_category.py  withheld_percent_category.py
mydata/models/: __init__.py  address.py  invoice.py  invoice_doc.py  invoice_header.py  invoice_row.py  invoice_summary.py  party.py  payment_method_detail.py  tax_totals.py  transport_detail.py  withheld_percent_category.py
mydata/utils/: group_classifications.py  summarize_invoice.py  summarize_invoice_rows.py  summarize_invoice_taxes.py
