[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
known_third_party = ["requests"]

[tool.flake8]
max-line-length = 88
exclude = ["__pycache__", "*.pyc", ".venv", "dist", "build", "docs"]
