[metadata]
name = mydatanaut
version = 0.1.0
description = Python SDK for AADE myData REST API
author = Thanos Theodoridis
author_email = at@atworks.gr
url = https://github.com/attheodo/mydatanaut
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
install_requires =
    requests >= 2.28.0, < 3.0
    typing-extensions >= 4.0.0
python_requires = >=3.10
include_package_data = True

[options.extras_require]
dev =
    black
    flake8
    isort
    pytest
    pytest-cov
    mypy
    pre-commit
    sphinx
